--- a/style.css
+++ b/style.css
@@ -67,10 +67,10 @@ button {
 }
 
 .game__field {
+  position: relative;
   width: 100%;
   height: 100%;
   margin-top: 50px;
-  opacity: 0.4;
 }
 
 .pop-up {
