--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ button {
   font-size: 25px;
   margin-top: 10px;
   visibility: hidden;
+  user-select: none;
+  cursor: auto;
 }
 
 .number {
@@ -66,6 +68,8 @@ button {
   color: #fff;
   text-align: center;
   visibility: hidden;
+  user-select: none;
+  cursor: auto;
 }
 
 .game__field {
@@ -109,4 +113,14 @@ button {
   display: block;
   font-size: 20px;
   color: #fff;
+}
+
+.carrot,
+.bug {
+  transition: transform 100ms ease-in;
+}
+
+.carrot:hover,
+.bug:hover {
+  transform: scale(1.1);
 }
